# page-parse-poc

./: .gitignore  LICENSE  README.md  pyproject.toml
web_browser/: __init__.py  __main__.py  driver.py  history.py  types.py
web_browser/document_intelligence/: client.py  config.py  models.py  processor.py  text_processing.py  utils.py
web_browser/dom/: builder.py  js_scripts.py  models.py
web_browser/vision/: client.py  config.py  models.py  types.py  utils.py
web_browser/web_analyzer/: analyzer.py  config.py  element_search.py  types.py
web_browser/web_analyzer/elements/: bounding_box.py  link_region.py  merger.py  unified_element.py
web_browser/web_analyzer/managers/: image.py  scroll.py  style.py
web_browser/web_analyzer/utils/: decorators.py  js.py  text.py
