[tool.poetry]
name = "page-parse-poc"
version = "0.1.0"
description = ""
authors = ["Ali Mahouk]
readme = "README.md"

[tool.poetry.dependencies]
azure-ai-documentintelligence = "^1.0.0"
azure-ai-vision-imageanalysis = "^1.0.0"
numpy = "^2.1.3"
openai = "^1.55.3"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
python = "^3.11"
python-dotenv = "^1.0.1"
scikit-learn = "^1.6.0"
selenium = "^4.27.1"
sentence-transformers = "^3.3.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
